# supportops-agent

./: .gitignore  ADVANCED_FEATURES.md  CONTRIBUTING.md  CREATE_REPO_FIRST.md  Dockerfile  GITHUB_SETUP.md  LICENSE  LOCAL_SETUP.md  Makefile  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  SCRIPTS.md  SETUP_LOCAL.md  TESTING.md  demo.sh  docker-compose.yml  pyproject.toml  run_agent.sh  setup.sh  start_api.sh
.github/workflows/: .gitkeep  ci.yml
data/policies/: account_recovery.md  escalation_rules.md  refund_policy.md  safety_policy.md
evals/: suite.yaml
evals/fixtures/: ticket_01.json  ticket_02.json  ticket_03.json  ticket_04.json  ticket_05.json  ticket_06.json  ticket_07.json  ticket_08.json  ticket_09.json  ticket_10.json  ticket_11.json  ticket_12.json
scripts/: setup_env.sh
supportops_agent/: __init__.py  cli.py  config.py  logging.py
supportops_agent/agents/: __init__.py  graph.py  guardrails.py  prompts.py  schemas.py
supportops_agent/api/: main.py  rate_limit.py  streaming.py
supportops_agent/cache/: __init__.py  memory_cache.py
supportops_agent/db/: __init__.py  models.py  session.py
supportops_agent/evals/: __init__.py  run.py
supportops_agent/feedback/: __init__.py  collector.py
supportops_agent/llm/: circuit_breaker.py  gemini.py  retry.py
supportops_agent/metrics/: __init__.py  collector.py
supportops_agent/tools/: __init__.py  email.py  policy_search.py  ticket_system.py
tests/: __init__.py  test_gemini_client.py  test_guardrails.py  test_tools.py
